gateway-api/deployment-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: exercise-15
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: nginx:1.28
        ports:
        - containerPort: 8080
