gateway-api/svc-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: exercise-15
spec:
  selector:
    app.kubernetes.io/name: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
